--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,9 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: /Insights # the subpath of your site, e.g. /blog
-url: https://iiserm.github.io # the base hostname & protocol for your site
-google_analytics: "UA-XXXXXXXX-X"
+baseurl:  # the subpath of your site, e.g. /blog
+url:  # the base hostname & protocol for your site
+#google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
 sent_message_url: "/contact/message-sent/"
