--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ email: turingclub@iisermohali.ac.in
 # Remove the item if you don't need it
 #github_username: Mr-R19HT
 #facebook_username: facebook_username
-#twitter_username: Mr_R19HT
-#instagram_username: instagram_username
+twitter_username: turing_iiserm
+instagram_username: turing_iiserm
 #linkedin_username: ahmed-ayman-8m7a99
 #medium_username: medium_username
 
