--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email: turingclub@iisermohali.ac.in
 #disqus_username: disqus_esKQctN0tI
 # Contact Form Setting
 # See: https://formspree.io/
-formspree_form_id: f/xpzgpdbo
+formspree_form_id: xpzgpdbo
 
 
 # Social Media Settings
